# eris

./: CMakeLists.txt
include/: base.hh  bitboard.hh  bits.hh  board.hh  engine.hh  move.hh  perft.hh  square.hh  stack.hh  tables.hh  types.hh  utils.hh
include/tei/: tei.hh
lib/: main.cc
lib/engine/: stack.cc
lib/tei/: main.cc  tei.cc
tests/: board.cc  main.cc  move.cc  perft.cc
